--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Sustainable Living Tips</title>
 </head>
 <body>
+    <main>
+        <header>
+    <h1 id="site-title"><a href="index.html">Sustainable Living Tips</a></h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Waste Reduction Tips</a></li>
+            <li><a href="index.html">Eco-Friendly Products</a></li>
+            <li><a href="index.html">Home Improvement Tips</a></li>
+            <li><a href="index.html">Contact Us</a></li>
+
+        </ul>
+
+    </nav>
+</header>
+<br><br>
+    </main>
+
+    
     
 </body>
 </html>
