added the welcome section with hero image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
 
     </nav>
 </header>
-<br><br>
+<section id="hero">
+    <div id="hero-text">
+    <h2>Welcome to Sustainable Living Tips</h2>
+    <p>Discover ways to live sustainably and make a positive impact on the 
+        environment. Embark on a journey towards eco-consciousness and discover
+         an array of innovative strategies to integrate sustainability into your daily life.</p>
+    <button class="form-submit">Contact Us Now!</button>
+</div>
+<div id="hero-image">
+    <img src=" " alt="Sustainable Living Tips image" />
+</div>
+</section>
+
     </main>
 
     
