deleted style and images file

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
     </form>
 </div>
 </section>
+
+<footer><p>
+    &copy; 2024 Sustainable Living Tips. All rights reserved.
+</p></footer>
     </main>
 
 
