added assets, with images and css sub diretories and also added needed images to the images directory and image tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sustainable Living Tips</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <main>
         <header>
@@ -30,13 +32,13 @@
     <button class="form-submit">Contact Us Now!</button>
 </div>
 <div id="hero-image">
-    <img src=" " alt="Sustainable Living Tips image" />
+    <img src="assets/images/sustainable-living-tips.jpg" alt="Sustainable Living Tips image" />
 </div>
 </section>
 
 <section id="featured">
     <div class="article">
-        <img src=" " alt="waste-reduction" />
+        <img src="assets/images/waste-reduction.jpg" alt="waste-reduction" />
         <div class="article-info">
             <h3>Waste Reduction Tips</h3>
             <p>
@@ -48,7 +50,7 @@
         </div>
     </div>
     <div class="article">
-        <img src=" " alt="eco-friendly-products" />
+        <img src="assets/images/eco-friendly-products.jpg" alt="eco-friendly-products" />
         <div class="article-info">
             <h3>Eco-Friendly Products</h3>
             <p>
@@ -61,7 +63,7 @@
         </div>
     </div>
     <div class="article">
-        <img src=" " alt="home-improvement" />
+        <img src="assets/images/home-improvement.jpg" alt="home-improvement" />
         <div class="article-info">
             <h3>Home Improvement Tips </h3>
             <p>
@@ -75,7 +77,7 @@
 </section>
 <section id="about">
 <div id="about-image">
-    <img src="" alt="about-us-image">
+    <img src="assets/images/sustainable-living.jpg" alt="about-us-image">
 </div> 
    <div id="about-text">
     <h3>
