--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
    </div>
 </section>
 
-<section id="Contact">
+<section id="contact">
 <div id="contact-text">
     <h3>Contact Us</h3>
     <p>If you have any questions or suggestions, feel free to contact us:</p>
