modified the hero image section and about us section for better positioning

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <button class="form-submit">Contact Us Now!</button>
 </div>
 <div id="hero-image">
-    <img src="assets/images/sustainable-living-tips.jpg" alt="Sustainable Living Tips image" />
+    <img src="assets/images/sustainable-living-tips.jpg" width="500" alt="Sustainable Living Tips image" />
 </div>
 </section>
 
@@ -77,15 +77,15 @@
 </section>
 <section id="about">
 <div id="about-image">
-    <img src="assets/images/sustainable-living.jpg" alt="about-us-image">
+    <img src="assets/images/sustainable-living.jpg" width="500" alt="about-us-image">
 </div> 
    <div id="about-text">
     <h3>
           About Us
     </h3>
     <p>
-        We are passionate about promoting sustainable living practices and empowering<br>
-             individuals to make eco-friendly choices in their daily lives.
+        At Sustainable Living Tips, we are driven by a passion for promoting sustainable living practices and empowering individuals to make eco-friendly choices in their daily lives. Our mission is to inspire and educate people about the importance of environmental conservation and provide practical solutions for reducing their ecological footprint.
+
     </p>
    </div>
 </section>
