--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="wastetip.html">Waste Reduction Tips</a></li>
+            <li><a href="waste-reduction-tips.html">Waste Reduction Tips</a></li>
             <li><a href="index.html">Eco-Friendly Products</a></li>
             <li><a href="index.html">Home Improvement Tips</a></li>
             <li><a href="index.html">Contact Us</a></li>
