created the eco-friendly products and home improvement tips pages

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="waste-reduction-tips.html">Waste Reduction Tips</a></li>
-            <li><a href="index.html">Eco-Friendly Products</a></li>
-            <li><a href="index.html">Home Improvement Tips</a></li>
+            <li><a href="eco-friendly-products.html">Eco-Friendly Products</a></li>
+            <li><a href="home-improvement-tips.html">Home Improvement Tips</a></li>
             <li><a href="index.html">Contact Us</a></li>
 
         </ul>
