created contact page and added style and added link to contact form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="waste-reduction-tips.html">Waste Reduction Tips</a></li>
             <li><a href="eco-friendly-products.html">Eco-Friendly Products</a></li>
             <li><a href="home-improvement-tips.html">Home Improvement Tips</a></li>
-            <li><a href="index.html">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
 
         </ul>
 
@@ -96,7 +96,7 @@
     <p>If you have any questions or suggestions, feel free to contact us:</p>
 </div>
 <div id="contact-form">
-    <form method="get" action="">
+    <form method="get" action="contact.html">
         <div>
         <input type="text" placeholder="Your Name" required>
     </div>
