--- a/waste-reduction-tips.html
+++ b/waste-reduction-tips.html
@@ -17,7 +17,7 @@
             <li><a href="waste-reduction-tips.html">Waste Reduction Tips</a></li>
             <li><a href="eco-friendly-products.html">Eco-Friendly Products</a></li>
             <li><a href="home-improvement-tips.html">Home Improvement Tips</a></li>
-            <li><a href="index.html">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
 
         </ul>
 
