added the social media links to every page

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,15 @@
 
 
 
-<footer><p>
+<footer>
+    <p>
+        <span>Find us on:</span>
+		<a class="social-media" href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
+		<a  class="social-media" href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+		<a class="social-media" href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+    </p>
+    
+    <p>
     &copy; 2024 Sustainable Living Tips. All rights reserved.
 </p></footer>
     </main>
