--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>Discover ways to live sustainably and make a positive impact on the 
         environment. Embark on a journey towards eco-consciousness and discover
          an array of innovative strategies to integrate sustainability into your daily life.</p>
-    <button class="form-submit">Contact Us Now!</button>
+         <a href="contact.html"><button class="form-submit">Contact Us Now!</button></a>
 </div>
 <div id="hero-image">
     <img src="assets/images/sustainable-living-tips.jpg" width="500" alt="Sustainable Living Tips image" />
@@ -123,13 +123,13 @@
 <footer>
     <p>
         <span>Find us on:</span>
-		<a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
-		<a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
-		<a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+		<a class="social-media" href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
+		<a  class="social-media" href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+		<a class="social-media" href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
     </p>
     
-    <p>
     
+  <p>  
     &copy; 2024 Sustainable Living Tips. All rights reserved.
 </p></footer>
     </main>
