changed site title in all pages and modified readme file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header>
-    <h1 id="site-title" ><a href="index.html">Sustainable Living Tips</a></h1>
+    <h1 id="site-title" ><a href="index.html">Sustainable Living Hub</a></h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -25,7 +25,7 @@
 </header>
 <section id="hero">
     <div id="hero-text">
-    <h2>Welcome to Sustainable Living Tips</h2>
+    <h2>Welcome to Sustainable Living Hub</h2>
     <p>Discover ways to live sustainably and make a positive impact on the 
         environment. Embark on a journey towards eco-consciousness and discover
          an array of innovative strategies to integrate sustainability into your daily life.</p>
@@ -84,7 +84,7 @@
           About Us
     </h3>
     <p>
-        At Sustainable Living Tips, we are driven by a passion for promoting sustainable living practices and empowering individuals to make eco-friendly choices in their daily lives. Our mission is to inspire and educate people about the importance of environmental conservation and provide practical solutions for reducing their ecological footprint.
+        At Sustainable Living Hub, we are driven by a passion for promoting sustainable living practices and empowering individuals to make eco-friendly choices in their daily lives. Our mission is to inspire and educate people about the importance of environmental conservation and provide practical solutions for reducing their ecological footprint.
 
     </p>
    </div>
