--- a/eco-friendly-products.html
+++ b/eco-friendly-products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sustainable Living Tips</title>
+    <title>Sustainable Living Hub</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="waste-reduction-tips.html">Waste Reduction Tips</a></li>
+            <li><a href="waste-reduction-tips.html">Waste Reduction Hub</a></li>
             <li><a href="eco-friendly-products.html">Eco-Friendly Products</a></li>
             <li><a href="home-improvement-tips.html">Home Improvement Tips</a></li>
             <li><a href="contact.html">Contact Us</a></li>
