--- a/home-improvement-tips.html
+++ b/home-improvement-tips.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sustainable Living Tips</title>
+    <title>Sustainable Living Hub</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 
 <body>
     <main>
         <header>
-    <h1 id="site-title" ><a href="index.html">Sustainable Living Tips</a></h1>
+    <h1 id="site-title" ><a href="index.html">Sustainable Living Hub</a></h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -59,7 +59,7 @@
 		<a class="social-media" href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
     </p>
     <p>
-    &copy; 2024 Sustainable Living Tips. All rights reserved.
+    &copy; 2024 Sustainable Living Hub. All rights reserved.
 </p></footer>
     </main>
 
