styled hero image and about to be more responsive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          <a href="contact.html"><button class="form-submit">Contact Us Now!</button></a>
 </div>
 <div id="hero-image">
-    <img src="assets/images/sustainable-living-tips.jpg" width="500" alt="Sustainable Living Tips image" />
+    <img class="main-image" src="assets/images/sustainable-living-tips.jpg" alt="Sustainable Living Tips image" />
 </div>
 </section>
 
@@ -77,7 +77,7 @@
 </section>
 <section id="about">
 <div id="about-image">
-    <img src="assets/images/sustainable-living.jpg" width="500" alt="about-us-image">
+    <img class="main-image" src="assets/images/sustainable-living.jpg"  alt="about-us-image">
 </div> 
    <div id="about-text">
     <h3>
