Removed button from anchor element in hero section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <header>
-    <h1 id="site-title" ><a href="index.html">Sustainable Living Hub</a></h1>
+    <h1 id="site-title"><a href="index.html">Sustainable Living Hub</a></h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -30,7 +30,7 @@
     <p>Discover ways to live sustainably and make a positive impact on the 
         environment. Embark on a journey towards eco-consciousness and discover
          an array of innovative strategies to integrate sustainability into your daily life.</p>
-         <a href="contact.html"><button class="form-submit">Contact Us Now!</button></a>
+        <a id="hero-contact" href="contact.html">Contact Us Now!</a>
 </div>
 <div id="hero-image">
     <img class="main-image" src="assets/images/sustainable-living-tips.jpg" alt="Sustainable Living Tips image" />
