removed trailing slashes from single tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sustainable Living Tips</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -33,13 +33,13 @@
         <a id="hero-contact" href="contact.html">Contact Us Now!</a>
 </div>
 <div id="hero-image">
-    <img class="main-image" src="assets/images/sustainable-living-tips.jpg" alt="Sustainable Living Tips image" />
+    <img class="main-image" src="assets/images/sustainable-living-tips.jpg" alt="Sustainable Living Tips image">
 </div>
 </section>
 
 <section id="featured">
     <div class="article">
-        <img src="assets/images/waste-reduction.jpg" alt="waste-reduction" />
+        <img src="assets/images/waste-reduction.jpg" alt="waste-reduction">
         <div class="article-info">
             <h3>Waste Reduction Tips</h3>
             <p>
@@ -51,7 +51,7 @@
         </div>
     </div>
     <div class="article">
-        <img src="assets/images/eco-friendly-products.jpg" alt="eco-friendly-products" />
+        <img src="assets/images/eco-friendly-products.jpg" alt="eco-friendly-products">
         <div class="article-info">
             <h3>Eco-Friendly Products</h3>
             <p>
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="article">
-        <img src="assets/images/home-improvement.jpg" alt="home-improvement" />
+        <img src="assets/images/home-improvement.jpg" alt="home-improvement">
         <div class="article-info">
             <h3>Home Improvement Tips </h3>
             <p>
