added hyperlinks to the read more links

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 In today's world, waste reduction is more critical than ever to
                  mitigate environmental damage and promote sustainability. 
             </p>
-            <p><a class="read-more"> Read More</a></p>
+            <p><a href="waste-reduction-tips.html" class="read-more"> Read More</a></p>
 
         </div>
     </div>
@@ -61,7 +61,7 @@
                  reduce your environmental impact and promote sustainability
 
             </p>
-            <p><a class="read-more"> Read More</a></p>
+            <p><a href="eco-friendly-products.html" class="read-more"> Read More</a></p>
 
         </div>
     </div>
@@ -73,7 +73,7 @@
                 Transform your living space into an eco-friendly oasis with
                  these sustainable home improvement tips
             </p>
-            <p><a class="read-more"> Read More</a></p>
+            <p><a href="home-improvement-tips.html" class="read-more"> Read More</a></p>
 
         </div>
     </div>
